improving the auth and oauth process and eliminating the manual log in
